--- a/example/index.css
+++ b/example/index.css
@@ -18,7 +18,7 @@ h3 {
   float: left;
   margin: 0 8px;
 }
-textarea {
+textarea, pre {
   width: 100%;
   border: 1px solid #d9d9d9;
   border-radius: 4px;
